--- a/src/Components/Onboarding/PatientRegister.css
+++ b/src/Components/Onboarding/PatientRegister.css
@@ -1,20 +1,205 @@
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
+ .patientregisterdiv{
+   width: 100vw;
+   height: 100vh;
+   /* background-color: red; */
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-family: poppins;
+  }  
+  
+
+  .patientregisterholder{
+    width:65%;
+    height: 80%;
+    /* background: whitesmoke; */
+    display: flex;
+    /* box-shadow: 2px 2px 4px #bcbaba; */
+  }
+
+  .leftpatientregister{
+    width: 38%;
+    height: 100%;
+    background-color:  #2c7da0;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding: 20px;
+  }
+
+  .upperleftpatientregister{
+    /* background: #000; */
+    width: 30%;
+    height: 14%;
+    align-items: center;
+    justify-content: center;
+    /* padding-inline: 10px; */
+    border-top-left-radius: 10px;
+    
+  }
+
+  .logoimage11{
+    width: 80%;
+    height: 80%;
+    object-fit: contain;
+  }
+
+ .image2{
+  width: 95%;
+  height: 95%;
+ }
+
+ .rightpatentrester{
+  width: 55%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+flex-direction: column;
+align-items: center;
+gap: 20px;
+
+
+ }
+
+ .signupdiv{
+  width: 85%;
+  height: 10%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  
+ }
+
+ .signupdiv>h2{
+  font-size: 22px;
+  font-family: Poppins;
+  font-weight: 500;
+ }
+
+ .theformholder{
+  width: 90%;
+  height:  50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: blue; */
+ }
+
+ .theformholder > input{
+  width: 100%;
+  height: 100%;
+  border: 1px solid lightblue;
+  background-color: red;
+  border-radius: 8px;
+  outline: 10px;
+  font-size: 14px;
+  font-size: 250;
+  font-family: poppins;
+  cursor: pointer;
+  background: none;
+  padding-left: 7px;
+
+ }
+
+ .loader{
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center ;
 }
+
+
+ .btnndiv {
+  width: 100%;
+  height: 80px;
+  /* background-color: green; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+ }
+ .submitbttn{
+  width: 90%;
+  height: 50px;
+  background-color:#2c7da0;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: poppins;
+ }
+
+ .submitbttn:hover{
+  background-color: #27b7f5;
+ }
+ 
+ 
+
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   /* 
 
 .registerbody1{
     width: 100vw;
     height: 100vh; 
-    /* background-color: yellow; */
+    background-color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
  } 
+
+ .registerbodywrapper{
+  width: 60%;
+  height: 80%;
+  background-color: purple;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
  
 .registerbothdiv{
-    width: 80%;
-    height:80% ;
-    background-color: white;
+    width: 60%;
+    height:70% ;
+    background-color: whitesmoke;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -32,58 +217,57 @@
       justify-content: space-between; 
     flex-direction: column;
     border-top-left-radius: 10px;
-    border-bottom-left-radius:10px ;
-}
+    /* border-bottom-left-radius:10px ; */
+/* }
 
 .registerlogo{
-    width: 100%;
-    height: 17%;
+    width: 90%;
+    height: 15%;
      background-color:pink; 
-    justify-content: flex-start;
-    display: flex; 
-    align-items: flex-end; 
+    display: flex;
+
    
 
 }
 
 .registerlogo >img{
-    width: 60%;
-    height: 73%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 } 
 
  .mainimage{
-    width: 100%;
-    height: 80%; 
+    width: 100%; */
+    /* height: 80%; 
      background-color: blue; 
      display: flex;
     align-items: center;
     justify-content: center; 
     /* gap: 50px; */
- } 
+ 
 
- .mainimage >img{
+ /* .mainimage >img{
     width: 100%;
     height: 100%;
 object-fit: contain;
-} 
-
+}  */
+/* 
  .registertextdiv{
     width: 60%;
     height: 100%; 
     /* background-color: purple; */
-     display: flex;
+     /* display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-around;
     
-} 
-
+}   */
+/* 
  .acctdiv{
     width: 50%;
-    height: 16%; 
+    height: 16%;  */
     /* background-color: aqua; */
-     display:flex; 
+     /* display:flex; 
   
  }
 .acctdiv >h1{
@@ -94,12 +278,13 @@ font-family: Poppins;
 
 .theform{
   width: 85%;
-  height: 15%; 
+  height: 12%;  */
   /* background-color: green; */
-   display: flex;
+   /* display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
+  gap: 10px;
 } 
 
  .theform>input{
@@ -112,8 +297,10 @@ font-family: Poppins;
   font-size: 20px;
   font-size: 300;
   font-family: poppins;
-} 
-
+  cursor: pointer;
+  background-color: white;
+}  */
+/* 
 
 
 .submitbtn {
@@ -129,4 +316,4 @@ font-family: Poppins;
   font-size: 20px;
   font-weight: 400;
   font-family: poppins;
-}
+}  */
