--- a/src/Components/LandingPage/HomePageHeader.css
+++ b/src/Components/LandingPage/HomePageHeader.css
@@ -1,6 +1,6 @@
 .mainHeader {
   width: 100vw;
-  height: 90px;
+  height: 10vh;
   background-color: white;
   margin-bottom: 10px;
   display: flex;
@@ -57,11 +57,12 @@ nav:hover {
   /* background-color: #7fffd4; */
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 20px;
 }
 
 .headsignup {
-  width: 47%;
+  width: 120px;
   height: 60%;
   border-radius: 5px;
   border: 1.5px solid #2c7da0;
@@ -81,7 +82,7 @@ nav:hover {
 }
 
 .headlogin {
-  width: 47%;
+  width: 120px;
   height: 60%;
   border: none;
   background-color: #2c7da0;
