--- a/src/Components/Onboarding/HospitalRegister.css
+++ b/src/Components/Onboarding/HospitalRegister.css
@@ -8,8 +8,6 @@
   font-family: poppins;
 }
 
-
-
 .patientregisterholder {
   width: 65%;
   height: 85%;
@@ -66,7 +64,7 @@
 }
 
 .signupdiv {
-  width: 85%;
+  width: 95%;
   height: 10%;
   display: flex;
   align-items: flex-end;
@@ -74,7 +72,7 @@
 
 }
 
-.signupdiv>h2 {
+.signupdiv > h2 {
   font-size: 22px;
   font-family: Poppins;
   font-weight: 500;
@@ -90,18 +88,13 @@
 }
 
 .theformholders {
-  width:  90%;
+  width: 95%;
   min-height: 50px;
   /* background: yellow; */
   border: 1px solid lightblue;
   border-radius: 8px;
   outline: 10px;
   font-size: 14px;
-  font-size: 250;
-  font-family: poppins;
-  cursor: pointer;
-  background: none;
-  padding-left: 7px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -109,41 +102,35 @@
 }
 
 .theformholdersWrapper{
-  height: 90%;
+  height: 100%;
   width: 100%;
   /* background: green; */
+  padding-inline-end: 7px;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
 }
 
 .theformholdersWrapper input{
   height: 100%;
-  width: 100%;
+  width: 95%;
   border: none;
-  outline: 10px;
+  outline: none;
   font-size: 14px;
-  font-size: 250;
   font-family: poppins;
   cursor: pointer;
   background: none;
   padding-left: 7px;
-  margin-right:20px;
+  /* margin-right:20px; */
   /* background: red; */
 }
 
-.theformholder>input {
+.theformholder > input {
   width: 100%;
   height: 100%;
-  border: 1px solid lightblue;
+  /* border: 1px solid lightblue; */
   /* background-color: red; */
   border-radius: 8px;
-  outline: 10px;
+  outline: none;
   font-size: 14px;
-  font-size: 250;
-  font-family: poppins;
-  cursor: pointer;
-  background: none;
   padding-left: 7px;
 
 }
@@ -216,57 +203,62 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
-@media screen and (max-width:428px) {
+.rightSignUpLogo{
+  display: none;
+}
+
+@media screen and (max-width: 325px) {
+  .patientregisterholder {
+    width: 90%;
+    height: max-content;
+    margin-top: 150px;
+    /* background-color: red; */
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .rightSignUpLogo{
+    display: flex;
+  }
   .leftpatientregister {
     display: none;
-
   }
 
   .patientregisterholder {
     width: 90%;
-    height: 80%;
+    height: max-content;
     /* background-color: red; */
-
   }
 
   .rightpatentrester {
     justify-content: space-evenly
   }
 
-  .signupdiv {
-    width: 100%;
-    height: 10%;
-
-  }
-
-  .signupdiv>h2 {
-    font-size: 15px;
-    font-weight: 400;
-  }
-
   .rightpatentrester {
     width: 100%;
     display: flex;
     justify-content: center;
+    padding-block: 10px;
     /* background-color: yellow; */
     align-items: center;
 
+  }
+
+  .signupdiv{
+    justify-content: center;
   }
 
   .theformholder {
     width: 95%;
     height: 40px;
     /* background: #000; */
-
   }
 
-  .theformholder>input {
-    padding-left: 8px;
-    height: 80%;
-
+  .theformholdersWrapper > input {
+    height: 100%;
+    width: 100%;
   }
 
   .loader {
@@ -276,56 +268,36 @@
 
   .btnndiv {
     width: 100%;
-    height: 70px;
+    height: max-content;
+    gap: 5px;
     /* background: #000; */
-
   }
 
   .submitbttn {
-    width: 90%;
-    height: 70px;
+    width: 95%;
+    height: 50px;
     font-size: 15px;
-
-
   }
 }
-
-
-
 
 
 @media screen and (max-width:820px) {
 
   .rightpatentrester {
-
     height: 100%;
     /* background-color: yellow; */
-
   }
 
   .signupdiv {
     height: 5%;
-
-
   }
-
-  .signupdiv>h2 {
-    font-size: 15px;
-    font-weight: 400;
-  }
-
 
   .theformholder {
     height: 20px;
-
-
   }
 
-  .theformholder>input {
+  .theformholder > input {
     width: 100%;
     height: 100%;
-
-
-
   }
 }
