--- a/src/Components/Onboarding/PatientRegister.css
+++ b/src/Components/Onboarding/PatientRegister.css
@@ -1,4 +1,4 @@
-.patientregisterdiv{
+.patientregisterdiv {
   width: 100vw;
   height: 100vh;
   /* background-color: red; */
@@ -6,272 +6,191 @@
   align-items: center;
   justify-content: center;
   font-family: poppins;
- }  
- 
-
- .patientregisterholder{
-   width:65%;
-   height: 80%;
-   /* background: whitesmoke; */
-   display: flex;
-   /* box-shadow: 2px 2px 4px #bcbaba; */
- }
-
- .leftpatientregister{
-   width: 38%;
-   height: 100%;
-   background-color:  #2c7da0;
-   border-top-left-radius: 15px;
-   border-bottom-left-radius: 15px;
-   padding: 20px;
- }
-
- .upperleftpatientregister{
-   /* background: #000; */
-   width: 30%;
-   height: 14%;
-   align-items: center;
-   justify-content: center;
-   /* padding-inline: 10px; */
-   border-top-left-radius: 10px;
-   
- }
-
- .logoimage11{
-   width: 80%;
-   height: 80%;
-   object-fit: contain;
- }
-
-.image2{
- width: 95%;
- height: 95%;
 }
 
-.rightpatentrester{
- width: 55%;
- height: 100%;
- display: flex;
- justify-content: center;
-flex-direction: column;
-align-items: center;
-gap: 20px;
-border: 1px solid #2c7da0;
-
-
+.patientregisterholder {
+  width: 65%;
+  height: 80%;
+  /* background: whitesmoke; */
+  display: flex;
+  /* box-shadow: 2px 2px 4px #bcbaba; */
 }
 
-.signupdiv{
- width: 85%;
- height: 10%;
- display: flex;
- align-items: flex-end;
- justify-content: flex-start;
- 
+.leftpatientregister {
+  width: 38%;
+  height: 100%;
+  background-color: #2c7da0;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  padding: 20px;
 }
 
-.signupdiv>h2{
- font-size: 22px;
- font-family: Poppins;
- font-weight: 500;
+.upperleftpatientregister {
+  /* background: #000; */
+  width: 30%;
+  height: 14%;
+  align-items: center;
+  justify-content: center;
+  /* padding-inline: 10px; */
+  border-top-left-radius: 10px;
 }
 
-.theformholder{
- width: 90%;
- height:  50px;
- display: flex;
- align-items: center;
- justify-content: center;
- /* background-color: blue; */
+.logoimage11 {
+  width: 80%;
+  height: 80%;
+  object-fit: contain;
 }
 
-.theformholder > input{
- width: 100%;
- height: 100%;
- border: 1px solid lightblue;
- background-color: red;
- border-radius: 8px;
- outline: 10px;
- font-size: 14px;
- font-size: 250;
- font-family: poppins;
- cursor: pointer;
- background: none;
- padding-left: 7px;
-
+.image2 {
+  width: 95%;
+  height: 95%;
 }
 
-.loader{
- width: 100%;
- height: 10%;
- display: flex;
- justify-content: center;
- align-items: center ;
+.rightpatentrester {
+  width: 55%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  border: 1px solid #2c7da0;
 }
 
+.theformholder {
+  width: 90%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  border: 1px solid lightblue;
+  overflow: hidden;
+  /* background-color: blue; */
+}
+
+.theformholder > input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  /* background-color: red; */
+  outline: none;
+  font-size: 14px;
+  font-family: poppins;
+  cursor: pointer;
+  background: none;
+  padding-left: 7px;
+}
+
+.loader {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .btnndiv {
- width: 100%;
- height: 80px;
- /* background-color: green; */
- display: flex;
- justify-content: center;
- align-items: center;
- flex-direction: column;
+  width: 100%;
+  height: 80px;
+  /* background-color: green; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.submitbttn{
- width: 90%;
- height: 50px;
- background-color:#2c7da0;
- border: none;
- border-radius: 5px;
- color: white;
- cursor: pointer;
- font-size: 20px;
- font-weight: 400;
- font-family: poppins;
-}
-
-.submitbttn:hover{
- background-color: #27b7f5;
+.submitbttn {
+  width: 90%;
+  height: 50px;
+  background-color: #2c7da0;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: poppins;
 }
 
+.submitbttn:hover {
+  background-color: #27b7f5;
+}
 
-
-@media screen  and (max-width:428px)
-{
-  .leftpatientregister{
-     display: none;
-
+@media screen and (max-width: 500px) {
+  .leftpatientregister {
+    display: none;
   }
 
-  .patientregisterholder{
+  .patientregisterholder {
     width: 90%;
     height: 80%;
     /* background-color: red; */
-    
   }
 
-  .rightpatentrester{
-    justify-content: space-evenly
+  .rightpatentrester {
+    justify-content: space-evenly;
+  }
 
-   }
-    
-.signupdiv{
-width: 100%;
-height: 10%;
 
-}
-
-   .signupdiv>h2{
-    font-size: 15px;
-    font-weight: 400;
-   }
-
-   .rightpatentrester{
+  .rightpatentrester {
     width: 100%;
+    height: max-content;
     display: flex;
     justify-content: center;
     /* background-color: yellow; */
     align-items: center;
+  }
 
-  
-  
-   }
-
-   .theformholder{
+  .theformholder {
     width: 95%;
-    height:  40px;
+    height: 40px;
     /* background: #000; */
-    
-   }
+  }
 
-   .theformholder > input{
+  .theformholder > input {
     padding-left: 8px;
     height: 80%;
-  
-   }
+  }
 
-   .loader{
+  .loader {
     height: 8%;
   }
 
+  .btnndiv {
+    width: 100%;
+    height: 70px;
+    /* background: #000; */
+  }
 
-.btnndiv {
- width: 100%;
- height: 70px;
- /* background: #000; */
+  .submitbttn {
+    width: 90%;
+    height: 70px;
+    font-size: 15px;
+  }
 
 }
 
-.submitbttn{
-  width: 90%;
-  height: 70px;
-  font-size: 15px;
+@media screen and (max-width: 820px) {
+  .rightpatentrester {
+    height: 100%;
+    /* background-color: yellow; */
+  }
 
+  .signupdiv {
+    height: 5%;
+  }
 
- }
+  .theformholder {
+    height: 20px;
+  }
+
+  .theformholder > input {
+    width: 100%;
+    height: 100%;
+  }
 }
 
-   
-@media screen and (max-width:820px) {
-      
- .rightpatentrester{
-
-   height: 100%;
-   /* background-color: yellow; */
-   
-  }
-
-  .signupdiv{
-   height: 5%;
-
-   
-  }
- 
-  .signupdiv>h2{
-   font-size: 15px;
-   font-weight: 400;
-  }
-
-   
- .theformholder{
-   height:  20px;
-
- 
-  }
- 
-  .theformholder > input{
-   width: 100%;
-   height: 100%;
-
- 
- 
-  }
-   }
-
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-  
-   
-   
-   
-   /* 
+/* 
 
 .registerbody1{
     width: 100vw;
@@ -334,15 +253,14 @@ height: 10%;
 
  .mainimage{
     width: 100%; */
-    /* height: 80%; 
+/* height: 80%; 
      background-color: blue; 
      display: flex;
     align-items: center;
     justify-content: center; 
     /* gap: 50px; */
- 
 
- /* .mainimage >img{
+/* .mainimage >img{
     width: 100%;
     height: 100%;
 object-fit: contain;
@@ -352,7 +270,7 @@ object-fit: contain;
     width: 60%;
     height: 100%; 
     /* background-color: purple; */
-     /* display: flex;
+/* display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-around;
@@ -362,8 +280,8 @@ object-fit: contain;
  .acctdiv{
     width: 50%;
     height: 16%;  */
-    /* background-color: aqua; */
-     /* display:flex; 
+/* background-color: aqua; */
+/* display:flex; 
   
  }
 .acctdiv >h1{
@@ -375,8 +293,8 @@ font-family: Poppins;
 .theform{
   width: 85%;
   height: 12%;  */
-  /* background-color: green; */
-   /* display: flex;
+/* background-color: green; */
+/* display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
